<resources>
    <string name="app_name">Eventy</string>
    <string name="cd_eventy_logo">Eventy Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="atau">Atau</string>
    <string name="app_desc">Aplikasi Manajemen Event</string>
    <string name="cd_slider">Slider</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Selamat Datang \ndi Eventy</string>
    <string name="email_error">Invalid email format</string>
    <string name="email_empty">Email field is required</string>
    <string name="password_error">Password harus lebih dari 8 karakter</string>
    <string name="password_empty">Password dibutuhkan</string>
    <string name="text_empty">Text dibutuhkan</string>
    <string name="hint_kata_sandi">Kata Sandi</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="nama_email">Nama / Email</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="hint_ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="masuk_sekarang">Masuk sekarang</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="minta_kode_otp">Minta Kode OTP</string>
    <string name="verifikasi_kode">Verifikasi Kode</string>
    <string name="message_otp">Masukkan kode OTP yang telah dikirimkan ke %1$s</string>
    <string name="kirim_ulang">Kirim Ulang!</string>
    <string name="tidak_menerima_kode_otp">Tidak menerima kode OTP?</string>
    <string name="kirim">Kirim</string>
    <string name="masukkan_kode_otp_yang_telah_dikirimkan_ke_n_62_xxxxxxxxx90">Masukkan kode OTP yang telah dikirimkan ke \n+62 XXXXXXXXX90</string>
    <string name="otp_code">OTP Code</string>
    <string name="selamat">Selamat !!</string>
    <string name="success_register">Success Register</string>
    <string name="verifikasi_sukses">Verifikasi sukses</string>
    <string name="pendaftaran_selesai">Pendaftaran selesai</string>
    <string name="kode_otp_dibutuhkan">Kode OTP dibutuhkan</string>
    <string name="faishal_mukhammad">Faishal Mukhammad</string>
    <string name="_081313327023">081313327023</string>
    <string name="logout">Logout</string>
    <string name="bantuan">Bantuan</string>
    <string name="friend">Friend</string>
    <string name="contact">Contact</string>
    <string name="home">Home</string>


    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="last_event">Last Event</string>
    <string name="_7_hari_terakhir">7 Hari Terakhir</string>
    <string name="_30_hari_terakhir">30 Hari Terakhir</string>
    <string name="august">August</string>
    <string name="july">July</string>
    <string name="_123456789">123456789</string>
    <string name="social_media">Social Media</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="add_friend">Add Friend</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="friend2">FRIEND</string>
    <string name="collaborator">COLLABORATOR</string>
    <string name="https_wa_grup_event_com">https//wa.grup event.com</string>
    <string name="_15_00_wib_end">15:00 WIB - end</string>
    <string name="konsep_acara">Konsep Acara</string>
    <string name="konsepacarafestival_pdf">KonsepAcaraFestival.pdf</string>
    <string name="divisi_perlengkapan">Divisi Perlengkapan</string>
    <string name="team">Team</string>
    <string name="project_manager">Project Manager</string>
    <string name="_70">70%</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="menu">Menu</string>
    <string name="member">Member</string>
    <string name="report">Report</string>
    <string name="add_collaborator">Add Collaborator</string>
    <string name="cd_add_event">Add Event</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="category">Category</string>
    <string name="enter_category">Enter Category</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="file">File</string>
    <string name="choose_file">Choose File</string>
    <string name="start_date">Start Date</string>
    <string name="date">Date</string>
    <string name="due_date">Due Date</string>
    <string name="division">Division</string>
    <string name="people">People</string>
    <string name="add_people">Add People</string>
    <string name="enter_date">Enter Date</string>
    <string name="coordinator">Coordinator</string>
    <string name="august_22_2024">August 22, 2024</string>
    <string name="menyiapkan_snack">Menyiapkan snack</string>
    <string name="rp_75_000">Rp. 75.000</string>
    <string name="spending_rp_350_000">Spending Rp. 350.000</string>
    <string name="status_overview_6">Status (6)</string>
    <string name="on_progress">On Progress</string>
    <string name="uncompleted">Uncompleted</string>
    <string name="completed">Completed</string>
    <string name="status">Status</string>
    <string name="author">Author</string>
    <string name="add_comment">Add Comment..</string>
    <string name="comment">Comment (%1$d)</string>
    <string name="enter_name_or_phone_number">Enter name or phone number</string>
    <string name="add_division">Add Division</string>
    <string name="enter_coordinator">Enter Coordinator</string>
    <string name="pick_color">Pick Color</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>


    <!--  Content Description  -->
    <string name="view_schedule">View Schedule</string>
    <string name="view_event">View Event</string>

    <!--  Landing  -->
    <string name="welcome_to_eventy">Welcome to \nEventy</string>
    <string name="event_management_application">Event management application</string>

    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="register">Register</string>

    <!--  Login  -->
    <string name="name_email">Name / Email</string>
    <string name="password">Password</string>

    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>

    <!--  Register  -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="request_code">Request Code</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>

    <!--  OTP  -->
    <string name="enter_the_otp_sent_to_zhalz_mail_com">Enter the OTP sent to zhalz@mail.com</string>
    <string name="don_t_receive_the_otp">Don\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="verification">Verification</string>

    <string name="congratulation">Congratulation !!</string>
    <string name="verification_success">Verification Success</string>
    <string name="registration_complete">Registration complete</string>

    <!--  Home  -->
    <string name="schedule_today">Schedule Today</string>
    <string name="event">Event</string>
    <string name="view_all">View All ></string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="meeting">Meeting</string>
    <string name="spending">Spending</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="events">Events</string>
    <string name="tasks">Tasks</string>
    <string name="mutual_event">Mutual Event</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_member">Enter Member</string>

</resources>