<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_horizontal_dots"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_member"
                android:icon="@drawable/ic_friend"
                android:title="@string/member"
                app:showAsAction="ifRoom|withText" />
            <item
                android:id="@+id/menu_add_collaborator"
                android:icon="@drawable/ic_user_add"
                android:title="@string/add_collaborator"
                app:showAsAction="ifRoom|withText" />
        </menu>
    </item>

</menu>