<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.zhalz.eventy.presentation.landing.LandingActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".presentation.landing.LandingActivity">

        <ImageView
            android:id="@+id/ic_eventy_logo"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginTop="65dp"
            android:contentDescription="@string/cd_eventy_logo"
            android:src="@drawable/ic_eventy_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="215dp"
            android:layout_height="75dp"
            android:contentDescription="@string/cd_eventy_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_eventy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_eventy_logo" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/cd_slider"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_slide"
            app:layout_constraintBottom_toTopOf="@+id/tv_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to_eventy"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_super_large"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintBottom_toTopOf="@id/tv_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/event_management_application"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_default"
            app:fontFamily="@font/poppins_regular"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="64dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/blue"
            android:onClick="@{() -> activity.toLogin()}"
            android:text="@string/login"
            android:textColor="@color/white"
            app:fontFamily="@font/poppins_bold"

            app:layout_constraintBottom_toTopOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/gray"
            app:strokeWidth="1dp"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/or"
            app:fontFamily="@font/poppins_semi_bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="64dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/yellow"
            android:onClick="@{() -> activity.toRegister()}"
            android:text="@string/register"
            android:textColor="@color/white"
            app:fontFamily="@font/poppins_bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/blue"
            app:strokeWidth="1dp"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>